api cleanups for swagger
